# protocol

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  release.sh
examples/: basic.rs  compression.rs  custom_middleware.rs  get_enum_discriminant.rs  packet_headers.rs  udp.rs
protocol/: Cargo.toml  TODO  TODO.rs
protocol-derive/: Cargo.toml
protocol-derive-tests/: Cargo.toml
protocol-derive-tests/src/: enum_trait.rs  enums.rs  length_prefix.rs  lib.rs  structs.rs
protocol-derive-tests/src/hints/: enums.rs  mod.rs  strukt.rs
protocol-derive/src/: attr.rs  format.rs  lib.rs  plan.rs
protocol-derive/src/codegen/: enums.rs  mod.rs
protocol/src/: enum_ty.rs  errors.rs  high_level.rs  hint.rs  lib.rs  parcel.rs  settings.rs  util.rs
protocol/src/attributes/: mod.rs
protocol/src/logic/: aligned.rs  mod.rs
protocol/src/packet/: macros.rs  test.rs
protocol/src/primitives/: array.rs  char.rs  composite.rs  mod.rs  numerics.rs  option.rs  smart_ptr.rs  string.rs  tuple.rs  vec.rs
protocol/src/primitives/collections/: list.rs  map.rs
protocol/src/types/: aligned.rs  array.rs  char.rs  composite.rs  cstring.rs  marker.rs  mod.rs  numerics.rs  option.rs  range.rs  smart_ptr.rs  string.rs  tuple.rs  unimplemented.rs  util.rs  uuid.rs  vec.rs
protocol/src/types/collections/: list.rs  map.rs
protocol/src/wire/: mod.rs  reader.rs
protocol/src/wire/dgram/: mod.rs
protocol/src/wire/middleware/: compression.rs  mod.rs  pipeline.rs  rotate_bytes.rs
protocol/src/wire/stream/: connection.rs  mod.rs
protocol/src/wire/stream/transport/: mod.rs  simple.rs
src/: error.rs  errors.rs  lib.rs  parcel.rs
src/packet/: connection.rs  macros.rs  mod.rs  packet.rs  test.rs  transport.rs
src/primitives/: array.rs  char.rs  composite.rs  mod.rs  numerics.rs  string.rs  util.rs
src/primitives/collections/: list.rs  map.rs  mod.rs
src/types/: array.rs  char.rs  composite.rs  hash_set.rs  mod.rs  numerics.rs  option.rs  rc.rs  smart_ptr.rs  string.rs  tuple.rs  uuid.rs  vec_deque.rs
src/types/collections/: linked_list.rs  list.rs  map.rs  mod.rs
src/wire/: mod.rs  transport.rs
src/wire/dgram/: mod.rs
src/wire/middleware/: mod.rs  pipeline.rs
src/wire/stream/: connection.rs  mod.rs
src/wire/stream/transport/: mod.rs  simple.rs
tests/: Cargo.toml
tests/src/: enum_trait.rs  enums.rs  length_prefix.rs  lib.rs  skip_if.rs  structs.rs
tests/src/hints/: enums.rs  mod.rs  strukt.rs
tests/src/logic/: aligned.rs  mod.rs
tests/src/wire/: mod.rs
tests/src/wire/stream/: connection.rs
