[package]
name = "protocol"
version = "0.1.4"
authors = ["Dylan McKay <dylanmckay34@gmail.com>"]

description = "Easy protocol definitions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dylanmckay/protocol"
documentation = "https://docs.rs/protocol"
keywords = ["protocol", "tcp", "udp", "connection", "encoding"]

[features]
default = []

[dependencies]
byteorder = "0.5"
flate2 = { version = "0.2", features = ["zlib"], default-features = false }
uuid = { version = "0.3", optional = true }

[dev-dependencies]
stainless = "0.1"

