[package]
name = "protocol"
version = "0.1.12"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Easy protocol definitions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dylanmckay/protocol"
documentation = "https://docs.rs/protocol"
keywords = ["protocol", "tcp", "udp", "connection", "encoding"]

[features]
default = []

[dependencies]
byteorder = "1.0"
flate2 = { version = "0.2", features = ["zlib"], default-features = false }
uuid = { version = "0.5", optional = true }

[dev-dependencies]
stainless = "0.1"

