[package]
name = "protocol-derive"
version = "0.5.12"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Easy protocol definitions"
license = "MIT"
repository = "https://github.com/dylanmckay/protocol"
documentation = "https://docs.rs/protocol"
keywords = ["protocol", "tcp", "udp", "connection", "encoding"]

[lib]
proc-macro = true

[dependencies]
# N.B. protocol-derive should not depend on the protocol crate.
# This causes releasing to be a pain - which one first - neither is possible!
syn = { version = "0.15.22", features = ["default", "extra-traits"] }
quote = "0.6.10"
proc-macro2 = "0.4"

