[package]
name = "protocol-derive"
version = "3.2.4"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = "Easy protocol definitions"
license = "MIT"
repository = "https://github.com/dylanmckay/protocol"
documentation = "https://docs.rs/protocol"
keywords = ["protocol", "tcp", "udp", "connection", "encoding"]

[lib]
proc-macro = true

# N.B. protocol-derive should not depend on the protocol crate.
# This causes releasing to be a pain - which one first - neither is possible!
[dependencies]
syn = { version = "1.0.60", features = ["default", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"

