[package]
name = "protocol"
version = "1.0.3"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Easy protocol definitions"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/dylanmckay/protocol"
documentation = "https://docs.rs/protocol"
keywords = ["protocol", "tcp", "udp", "connection", "encoding"]

[features]
default = ["uuid"]

[dependencies]
byteorder = "1.2"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
uuid = { version = "0.6", optional = true }
error-chain = "0.11"
num-traits = "0.2"

[dev-dependencies]
# Used in examples
protocol-derive = { path = "../protocol-derive", version = "1.0.3" }

[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "compression"
path = "../examples/compression.rs"

[[example]]
name = "custom_middleware"
path = "../examples/custom_middleware.rs"

[[example]]
name = "packet_headers"
path = "../examples/packet_headers.rs"

[[example]]
name = "udp"
path = "../examples/udp.rs"

