[package]
name = "protocol"
version = "3.2.6"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = "Easy protocol definitions"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/dylanmckay/protocol"
documentation = "https://docs.rs/protocol"
keywords = ["protocol", "tcp", "udp", "connection", "encoding"]

[features]
default = ["uuid", "high-level-trait"]

high-level-trait = [] # The HighLevel trait is slated to be deprecated. it is horribly designed. sorry.

impl-box = [] # Should be enabled by default but it conflicts with 'high-level-trait' for now.

[dependencies]
byteorder = "1.4"
flate2 = { version = "1.0" }
uuid = { version = "0.8", optional = true }
error-chain = "0.12"
num-traits = "0.2"

[dev-dependencies]
# Used in examples
protocol-derive = { path = "../protocol-derive", version = "3.2.6" }

[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "compression"
path = "../examples/compression.rs"

[[example]]
name = "custom_middleware"
path = "../examples/custom_middleware.rs"

[[example]]
name = "packet_headers"
path = "../examples/packet_headers.rs"

[[example]]
name = "udp"
path = "../examples/udp.rs"

[[example]]
name = "get_enum_discriminant"
path = "../examples/get_enum_discriminant.rs"
