[package]
name = "protocol-tests"
version = "0.0.0" # do not change this, no point, it never gets published.
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

publish = false

[dependencies]
protocol = { path = "../protocol", default-features = false, features = ["impl-box", "derive"] } # TODO: remove default-features=false when impl-box is a default
